# docs/swagger.yaml
@@ -1,5 +1,19 @@
 basePath: /v1
 definitions:
+  creator.CreatorArticleRequestPayload:
+    properties:
+      content:
+        type: string
+      creator_id:
+        type: integer
+      title:
+        maxLength: 150
+        type: string
+    required:
+    - content
+    - creator_id
+    - title
+    type: object
   user.LoginUserRequest:
     properties:
       email:
@@ -299,6 +313,31 @@ paths:
       summary: User verification
       tags:
       - authentication
+  /creator/createnews:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: News info
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/creator.CreatorArticleRequestPayload'
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+      summary: Create news article by creators
+      tags:
+      - creator
   /health:
     get:
       description: Healthcheck endpoint
